--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <title>Jamstack Explorers - Up and Running with Serverless Functions</title>
+    <title>David's Up and Running with Serverless Functions</title>
   </head>
   <body>
     <h1>Up and Running with Serverless Functions</h1>
@@ -18,8 +18,11 @@
         const fetchBtn = document.getElementById('fetch-btn')
         const responseText = document.getElementById('response-output')
 
-        fetchBtn.addEventListener('click', () => {
-          responseText.innerText = 'Static Text Replacement'
+        fetchBtn.addEventListener('click', async () => {
+          const response = await fetch('/.netlify/functions/hello-world').then(response =>
+          response.json());
+
+          responseText.innerText = JSON.stringify(response);
         })
       })
     </script>
